# evolve-desktop

./: .env  .env.example  .env.production  .gitignore  .gitlab-ci.yml  .gitmodules  ARCHITECTURE.md  BUILD.md  BUILD_RELEASE.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  PROJECT_STATUS.md  README.md  install-tauri-deps.sh  monitor-build-v1.0.6.sh  monitor-build-v1.0.7.sh  monitor-build.sh
docs/: ADMIN_INTERFACE_GUIDE.md  CLEAN_BUILD_COMPLETE.md  CLEAN_START_SPEC.md  CRM_API_SPECIFICATION.md  DEPLOYMENT_AND_DISTRIBUTION.md  DESKTOP_APP_PLAYBOOK.md  DESKTOP_APP_SPEC.md  DESKTOP_EMAIL_CLIENT_ARCHITECTURE.md  DESKTOP_MODULES_BACKEND.md  EIQ_DESKTOP_EXTENDED_ARCHITECTURE.md  EIQ_EXACT_CLONE_SPEC.md  EVOLVEMAILPRO_REPOSITORY_SETUP.md  FEATURE_PARITY_MATRIX.md  MODULE_PRIORITY_MATRIX.md  MODULE_SELECTOR_COMPLETE.md  MVP_IMPLEMENTATION_GUIDE.md  NEXT_STEPS_GUIDE.md  PLUGIN_SYSTEM_ARCHITECTURE.md  README_SYNC_DOCS.md  SMART_SYNC_STRATEGY.md  SYMFONY_API_IMPLEMENTATION.md  SYNC_STRATEGY_SUMMARY.md  UI_DESIGN_SYSTEM.md
evolve-desktop/: .env  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_OPTIONS.md  DEVELOPMENT_LOG.md  GITHUB_INTEGRATION_SUMMARY.md  MULTI_TENANT_GUIDE.md  QUICK_START.md  SETUP_WIZARD.md  TAURI_SETUP.md  build-frontend.js  com.evolveapp.desktop.desktop  com.evolveapp.desktop.yml  evolve-desktop-wrapper.sh  index.html  package-lock.json  package.json  tailwind.config.js  test-connection.html  test-health.html  vite.config.ts
evolve-desktop/src-tauri/: Cargo.toml  splash.html  tauri.conf.json
evolve-desktop/src-tauri/assets/: loading.html  sidebar.html  tabbar.html
evolve-desktop/src-tauri/capabilities/: default.json
evolve-desktop/src-tauri/icons/: README.md  icon.icns
evolve-desktop/src-tauri/src/: database.rs  diagnostics.rs  main.rs  sidebar.js
github-webhook-integration/: README.md
src/: App.vue  (+1 more)
(+62 files in other folders)
