[package]
name = "evolve-desktop"
version = "2.2.11"
description = "EvolveApp - Desktop wrapper for evolvepreneuriq.app"
authors = ["EvolveApp Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["tray-icon"] }
tauri-plugin-shell = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-http = "2.2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
